<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"></string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="one">Chủ Đề</string>
    <string name="two">Yêu thích</string>
    <string name="three">Tải xuống</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="text_xemtruoc">Xem trước</string>
    <string name="text_thietlap">Thiết lập</string>
    <string name="text_yeuthich">Yêu thích</string>
    <string name="text_luu">Tải về</string>
    <string name="text_manhinhchinh">Màn hình chính</string>
    <string name="text_manhinhkhoa">Màn hình khóa</string>
    <string name="text_cahai">Đặt cả hai</string>
    <string name="text_dathinhnen">Đặt hình nền</string>
    <string name="text_share">Chia sẻ</string>
    <string name="text_nhieu">Nhiều hơn</string>
    <string name="text_crop">Xén ảnh</string>

</resources>
