<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_thietlap"
        android:icon="@drawable/detail_set"
        android:title="@string/text_thietlap"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_xemtruoc"
        android:icon="@drawable/ic_action_visible"
        android:title="@string/text_xemtruoc"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_yeuthich"
        android:icon="@drawable/ic_action_non_favoutite"
        android:title="@string/text_yeuthich"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_luu"
        android:icon="@drawable/ic_action_download"
        android:title="@string/text_luu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_nhieuhon"
        android:icon="@drawable/ic_action_nhieuhon"
        android:title="@string/text_nhieu"
        app:showAsAction="ifRoom" />

</menu>
